# Diana7-ROS2

./: README.md
diana7_bringup/: CMakeLists.txt  package.xml
diana7_bringup/config/: controllers.yaml
diana7_bringup/launch/: hardware_real.launch.py  hardware_sim.launch.py  rviz_bringup.launch.py
diana7_description/: CMakeLists.txt  package.xml
diana7_description/meshes/: base_link.STL
diana7_description/urdf/: diana7.gazebo.xacro  diana7.transmission.xacro  diana7.urdf.xacro  diana7_robot.urdf.xacro
diana7_hardware/: CMakeLists.txt  package.xml  plugin_description.xml
diana7_hardware/include/diana7_hardware/: diana7_system.hpp
diana7_hardware/src/: brake_service_node.cpp  diana7_system.cpp  speedl_line_test.cpp
diana7_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
diana7_moveit_config/config/: diana7.ros2_control.xacro  diana7.srdf  diana7.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml
diana7_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
